SRM (0.6.1-1)

  # Performance

  * Added new PRIME rendering mode to enhance performance in multi-GPU setups with few common DMA formats/modifiers.
  * Integrated GPUs are now set as the default allocator device (primary device), promoting lower power consumption and improved performance.

  # Bug Fixes

  * Added small validation tests to ensure proper selection of main-memory buffer allocation APIs, preventing texture glitches on drivers that do not fully support GBM APIs.

  # Environment

  * All rendering modes now default to double buffering, with optional support for triple buffering, while the single buffering option has been deprecated.

  # Examples

  * Added link to example that uses Skia as renderer.

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 06 Jul 2024 23:28:04 -0400


SRM (0.6.0-1)

  # New APIs

  * Introduced srmConnectorSetContentType() and srmConnectorGetContentType() functions to optimize display hardware for the type of content being displayed.

  # Bug Fixes

  * Ensured connector properties are re-synchronized after session switching to resolve issues with cursor visibility, position, and other related errors.

  # Internal Changes

  * Replaced custom connector name IDs with connector_type_id (e.g., HDMI-A-1, HDMI-A-2, etc.).
  * Maintained a copy of gamma tables in the legacy API to ensure proper restoration during session switching.

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 29 Jun 2024 18:46:15 -0400


SRM (0.5.7-1)

  # Bug Fixes

  * Fix bug when using the atomic API that prevents cursor planes from being displayed when the first commit fails.

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Mon, 17 Jun 2024 15:50:52 -0400


SRM (0.5.6-2)

  # Building

  * Add DRM headers dependency to all examples to resolve issues locating the drm_fourcc.h header, thanks to @EBADBEEF.
  * Remove unnecessary header include checks in meson.build.
